--- a/app/styles/shared/settings/_settings.color.scss
+++ b/app/styles/shared/settings/_settings.color.scss
@@ -13,6 +13,7 @@ $havelock-blue:   #4a90e2; // Request colour
 $storm-gray:      #686983; // base colour for side-panel component
 $lynch:           #607d8b;
 
+$alabaster:       #f9f9f9;
 $wild-sand:       #f5f5f5;
 $alto:            #e0e0e0;
 $grey:            #808080;
@@ -52,6 +53,7 @@ $color-collection:      $lynch;
 $color-datasource:      $storm-gray;
 
 $color-white:           #ffffff;
+$color-i-cant-believe-its-not-white: $alabaster;
 $color-off-white:       $wild-sand;
 $color-very-light-grey: $alto;
 $color-light-grey:      $grey;
